[package]
name = "p2p_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = { version = "4.5.1", features = ["openssl"] }
actix-web-actors = "4.3.0"
clap = { version = "4.5.4", features = ["derive"] }
dashmap = "5.5.3"
dotenv = "0.15.0"
env_logger = "0.11.3"
flate2 = "1.0.28"
futures-util = "0.3.30"
openssl = "0.10.64"
rand = "0.8.5"
reqwest = "0.12.2"
rustls = "0.23.4"
rustls-pemfile = "2.1.1"
serde = "1.0.197"
serde_json = "1.0.115"
time = { version = "0.3.34", features = ["local-offset"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-openssl = "0.6.4"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "time"] }
uuid = "1.8.0"
